# freecoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: README.md
contrib/: README.md  gitian-build.py  gitian-build.sh  install_db4.sh  tidy_datadir.sh
contrib/debian/: copyright
contrib/devtools/: gen-manpages.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  freecoin-conf.md  fuzzing.md  gitian-building.md  reduce-traffic.md  release-notes-freecoin.md  release-process.md  tor.md  travis-ci.md  zmq.md
doc/man/: Makefile.am  freecoin-cli.1  freecoin-qt.1  freecoin-tx.1  freecoin-wallet.1  freecoind.1
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.cpp  pow.cpp  txdb.cpp  util.cpp  validation.cpp  validation.h
test/: README.md
(+259 files in other folders)
