dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=freecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=freecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=freecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=freecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=freecoin-wallet.1
endif
endif
